<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".searchBox">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="107dp">

        <ProgressBar
            android:id="@+id/pgbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp" />

    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="3dp">




        <LinearLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:shadowColor="#FFFFFF"
                android:text="@string/Bnum"
                android:textColor="@color/colorTrendingEnd"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/et_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/bearing_number"
                android:inputType="textPersonName" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ID"
                    android:textColor="@color/colorTrendingEnd"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_text2"
                    android:layout_width="169dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="3"
                    android:hint="@string/inner_dimension"
                    android:inputType="textPersonName"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/OD"
                    android:textColor="@color/colorTrendingEnd"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_text3"
                    android:layout_width="162dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="3"
                    android:hint="@string/outer_dimension"
                    android:inputType="textPersonName"
                    android:autofillHints="" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Thick"
                    android:textColor="@color/colorTrendingEnd"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/et_text4"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="3"
                    android:hint="@string/thikness"
                    android:inputType="textPersonName"
                    android:autofillHints="" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <ListView android:layout_height="0dp" android:layout_width="0dp" android:id="@+id/LIst" app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/linearLayout" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintBottom_toBottomOf="parent"> </ListView>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:foregroundGravity="center"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-4457607627039532/2539754420"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>